# revolution-fiesta

./: .gitignore  README.md  go.mod  go.sum  schema.sql
.github/workflows/: backend_tests.yaml  proto.yaml
backend/: go.mod  go.sum  main.go
backend/api/: auth_service.go  router.go
backend/api-test/: auth_service_test.go
backend/api/auth/: utils.go
backend/api/interceptors/: auth_interceptor.go
backend/api/utils/: auth.go  auth_test.go  context.go
backend/config/: config.go
backend/mail/: mail.go  mail_test.go
backend/migration/: migration.go
backend/store/: auth_store.go  migration.go  store.go
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue
perf/: CMakeLists.txt  build.bash
perf/include/: main.h
perf/src/: main.cc
postgre_database_create/: go.mod  main.go
proto/: buf.gen.yaml
proto/api/v1/: auth_service.proto
proto/generated-go/api/v1/: auth_service.pb.go  auth_service_grpc.pb.go
proto/generated-ts/api/v1/: auth_service.ts
proto/perf/api/v1/: auth_service.pb.cc  auth_service.pb.h
高斯消元/: go.mod  main.go
